# parallax

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LIMITATIONS.md  README.md  pyproject.toml
cluster/: __init__.py  __main__.py  blindspot.py  cluster.py  embed.py
compare/: __init__.py  divergence.py
config/: settings.example.yaml  sources.yaml
dashboard/: README.md  export.py  index.html
ingestion/: __init__.py  __main__.py  config.py  datastore.py  dedup.py  extract.py  gdelt.py  pipeline.py
scoring/: __init__.py  aggregate.py  dictionary.py  ensemble.py  foundations.py  lexicon.py  seed_lexicon.py  transformer.py
summarize/: __init__.py  __main__.py  prompts.py  summarizer.py
tests/: __init__.py  test_aggregate_compare.py  test_cluster.py  test_dashboard_export.py  test_datastore.py  test_dedup.py  test_dictionary_scoring.py  test_ensemble.py  test_gdelt_backfill.py  test_lexicon_wiring.py  test_sources_registry.py  test_summarize.py  test_validation.py
validation/: README.md  __init__.py  __main__.py  evaluate.py  gold.py  metrics.py
validation/gold/: seed.json
