[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parallax"
version = "0.1.0"
description = "A moral-foundations mirror for two media diets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "compbiolover" }]
keywords = ["moral-foundations", "media-analysis", "nlp", "mft"]

# Core runtime deps = the Phase 1 pipeline (extraction + dedup + dictionary
# scoring + compare). Heavier, phase-specific stacks (transformers, whisper,
# umap, hdbscan) are pulled in via optional-dependencies as later phases land.
dependencies = [
  "pyyaml>=6.0",
  "feedparser>=6.0",       # RSS/Atom parsing
  "trafilatura>=1.9",      # article body extraction
  "datasketch>=1.6",       # MinHash near-dup detection
  "numpy>=1.26",
  "scipy>=1.13",           # Jensen-Shannon divergence
]

[project.optional-dependencies]
# Phase 1 extras not required by the built-in scorer: the production eMFD
# lexicon (the dictionary scorer loads it via scoring.lexicon.load_emfd_csv;
# the bundled seed lexicon is a demo only) and Claude for summaries.
llm = [
  "anthropic>=0.34",       # Claude summarization / adjudication
]
# eMFDscore installs from GitHub, not PyPI:
#   pip install "git+https://github.com/medianeuroscience/emfdscore.git"
# Phase 2 — blindspot engine: embeddings + UMAP + HDBSCAN.
cluster = [
  "sentence-transformers>=3.0",
  "umap-learn>=0.5",
  "hdbscan>=0.8.33",
]
# Phase 3 — transformer tagger + compositional stats.
scoring = [
  "transformers>=4.42",
  "torch>=2.2",
  "scikit-bio>=0.6",       # CLR / Aitchison
]
# Phase 4 — multimedia ingestion.
media = [
  "faster-whisper>=1.0",
  "youtube-transcript-api>=0.6",
  "yt-dlp>=2024.7.0",
]
# Developer tooling.
dev = [
  "ruff>=0.5",
  "pytest>=8.0",
  "mypy>=1.10",
  "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion", "scoring", "cluster", "compare", "summarize"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
